# CMOR-438

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: README.md
src/ml/: NueralModels.py  knn.py  metrics.py  post_process.py  pre_process.py
src/ml.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_basic_functions.py  test_knn.py  test_metrics.py  test_post_process.py  test_pre_process.py
