[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml"
version = "0.1.0"
description = "Python Machine Learning for Class"
authors = [{ name = "Benjamin May", email = "btm2@rice.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib", "seaborn", "pandas", "requests"]

[project.optional-dependencies]
dev = ["pytest"]

# >>> These two lines make the src/ layout unambiguous <<<
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]